<resources>
    <string name="app_name">Prayers &amp; Dhikr</string>
    <string name="title">Doa dan Dzikir App</string>
    <string name="txt_judul_fitur">Kumpulan Doa &amp; Dzikir Sehari-Hari</string>
    <string name="txt_sunnah_qauliyah">Sunnah-Sunnah Qauliyah \nDzikir &amp; Doa Shalat</string>
    <string name="txt_dzikir_setiap_saat">Dzikir Setiap Saat</string>
    <string name="txt_dzikir_doa_harian">Dzikir &amp; Doa Harian</string>
    <string name="txt_dzikir_pagi_petang"><![CDATA[Dzikir Pagi & Petang]]></string>
    <string name="txt_artikel_islami">Artikel Islami</string>
    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="txt_dzikir_petang">Dzikir Petang</string>
    <string name="content_txt_icon_dzikir_pagi_petang">Icon Dzikir Pagi Petang</string>
    <string name="content_txt_icon_dzikir_doa_harian">Icon Dzikir Doa Harian</string>
    <string name="content_txt_icon_dzikir_setiap_saat">Icon Dzikir Setiap Saat</string>
    <string name="content_txt_icon_qauliyah_shalat">Icon Qauliyah Shalat</string>
    <string name="content_txt_icon_btn_dzikir_pagi">Icon btn dzikir Pagi</string>
    <string name="content_txt_icon_btn_dzikir_petang">Icon btn Dzikir Petang</string>
    <string name="content_txt_icon_image_for_background_dzikir">Icon image for Background Dzikir</string>
    <string name="content_txt_image_artikel">Image Poster Detail Artikel</string>
    <string-array name="arr_img_artikel">
        <item>@drawable/sedekahadalahbuktikeimanan</item>
        <item>@drawable/bahayariba</item>
        <item>@drawable/taubatnasuha</item>
        <item>@drawable/orangorangmunafik</item>
        <item>@drawable/keutamaanmembacaalquran</item>
        <item>@drawable/perintahuntukberdzikir</item>
        <item>@drawable/surgafirdaus</item>
        <item>@drawable/nerakajahannam</item>
    </string-array>
    <string-array name="arr_title_artikel">
        <item>Sedekah Adalah Bukti Keimanan</item>
        <item>Bahaya Riba Sebagai Seorang Muslim</item>
        <item>Memahami Taubat Nasuha</item>
        <item>Waspada akan orang-orang munafik!</item>
        <item>Keutamaan Membaca Al-Qur\'an</item>
        <item>Untuk Apa Kita Berdzikir Kepada Allah?</item>
        <item>Surga Tertinggi: Firdaus</item>
        <item>Neraka Terrendah: Jahannam</item>
    </string-array>
</resources>