<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/arabic_arihna"
        android:text="@string/app_name"
        android:textColor="@color/main"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_artikel"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:id="@+id/ll_slider_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dashboard_menu"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/arabic_arihna"
                    android:text="@string/txt_judul_fitur"
                    android:textColor="@color/main"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dzikir_doa_shalat"
                    style="@style/main_menu_card_style">

                    <LinearLayout
                        android:id="@+id/ll_dzikir_doa_shalat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:contentDescription="@string/content_txt_icon_qauliyah_shalat"
                            android:src="@drawable/ic_doa"
                            style="@style/main_menu_icon_style" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:text="@string/txt_sunnah_qauliyah"
                            android:textColor="@color/main"
                            android:textSize="16sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dzikir_setiap_saat"
                    style="@style/main_menu_card_style">

                    <LinearLayout
                        android:id="@+id/ll_dzikir_setiap_saat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:contentDescription="@string/content_txt_icon_dzikir_setiap_saat"
                            android:src="@drawable/ic_time"
                            style="@style/main_menu_icon_style" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:text="@string/txt_dzikir_setiap_saat"
                            android:textColor="@color/main"
                            android:textSize="16sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dzikir_doa_harian"
                    style="@style/main_menu_card_style">

                    <LinearLayout
                        android:id="@+id/ll_dzikir_doa_harian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:contentDescription="@string/content_txt_icon_dzikir_doa_harian"
                            android:src="@drawable/ic_dzikir"
                            style="@style/main_menu_icon_style" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:text="@string/txt_dzikir_doa_harian"
                            android:textColor="@color/main"
                            android:textSize="16sp" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dzikir_pagi_petang"
                    style="@style/main_menu_card_style">

                    <LinearLayout
                        android:id="@+id/ll_dzikir_pagi_petang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:contentDescription="@string/content_txt_icon_dzikir_pagi_petang"
                            android:src="@drawable/ic_pagi_petang"
                            style="@style/main_menu_icon_style" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:text="@string/txt_dzikir_pagi_petang"
                            android:textColor="@color/main"
                            android:textSize="16sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>